Added support for specifying dualityGapThreshold

--- a/mac_gap_config.json
+++ b/mac_gap_config.json
@@ -2,9 +2,10 @@
     "lambdaMin" : 40,
     "lambdaMax" : 50,
     "gapPrec" : 0.000000000001,
-    "lmaxLower" : 1,
+    "lmaxLower" : 3,
     "lmaxUpper" : 40,
     "procsPerNode" : 4,
+    "dualityGapThreshold" : 1e-60,
     "pythonPrec" : 500,
     "sdpbPrec" : 2048,
     "mac" : true,
