fixed config files

--- a/hpc_bolza_config.json
+++ b/hpc_bolza_config.json
@@ -3,11 +3,11 @@
     "lambdaMax" : 10,
     "n" : 1,
     "ln" : 2,
-    "gapPrec" : 0.00000000000000000001,
+    "gapPrec" : 1e-30,
     "lmaxLower" : 3,
-    "lmaxUpper" : 40,
+    "lmaxUpper" : 80,
     "procsPerNode": 1,
-    "dualityGapThreshold" : 1e-60,
+    "dualityGapThreshold" : 1e-100,
     "pythonPrec" : 500,
     "sdpbPrec" : 2048,
     "workingDir" : "/users/k21187236/scratch/hyperbolic-python/bolza",
