Fixed that bloody bug with bolza.py

--- a/mac_bolza_config.json
+++ b/mac_bolza_config.json
@@ -1,11 +1,11 @@
 {
-    "lambdaMin" : 1,
-    "lambdaMax" : 10,
+    "lambdaMin" : 3.7,
+    "lambdaMax" : 4.1,
     "n" : 1,
     "ln" : 2,
-    "gapPrec" : 0.000000000001,
+    "gapPrec" : 1e-6,
     "lmaxLower" : 3,
-    "lmaxUpper" : 40,
+    "lmaxUpper" : 59,
     "procsPerNode" : 4,
     "dualityGapThreshold" : 1e-60,
     "pythonPrec" : 500,
